--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             <li class="skill-chip">Web Dev</li>
             <li class="skill-chip">Firebase</li>
             <li class="skill-chip">GitHub</li>
-            <li class="skill-chip">Design veloce</li>
+            <li class="skill-chip">Design</li>
           </ul>
         </div>
       </div>
@@ -326,11 +326,11 @@
         <div class="skill-chip" role="listitem">HTML</div>
         <div class="skill-chip" role="listitem">CSS</div>
         <div class="skill-chip" role="listitem">JavaScript</div>
-        <div class="skill-chip" role="listitem">Node.js</div>
-        <div class="skill-chip" role="listitem">React</div>
-        <div class="skill-chip" role="listitem">Figma</div>
+        <div class="skill-chip" role="listitem">VB.NET</div>
         <div class="skill-chip" role="listitem">Canva</div>
         <div class="skill-chip" role="listitem">Firebase</div>
+<div class="skill-chip" role="listitem">GitHub</div>
+<div class="skill-chip" role="listitem">Python</div>
       </div>
     </section>
 
