--- a/index.html
+++ b/index.html
@@ -370,6 +370,17 @@
             <a href="#card" class="btn primary"><i class="fa fa-code"></i> In sviluppo</a>
           </div>
         </div>
+
+<div class="card">
+          <div class="title">
+            <h3>ShareMiiShot</h3>
+            <span class="meta">Servizio web• 2025</span>
+          </div>
+          <p>ShareMiiTool è un servizio wen che permette la condivisione di foto tra Wii U/3DS e altri dispositivi come telefoni e PC.</p>
+          <div class="actions">
+            <a href="https://madebyanto.github.io/sharemiishot" class="btn primary"><i class="fa fa-book"></i> Vai al sito</a>
+          </div>
+        </div>
       </div>
     </section>
 
