--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <section id="about" aria-labelledby="aboutTitle">
       <div class="hero">
         <div class="avatar" role="img" aria-label="Foto di Anto">
-          <img src="https://aurastudioitalia.it/antogalaxyavatar.png" alt="Anto immagine profilo">
+          <img src="anto.png" alt="Anto immagine profilo">
         </div>
         <div class="bio">
           <h2 id="aboutTitle">Chi sono</h2>
@@ -374,9 +374,9 @@
 <div class="card">
           <div class="title">
             <h3>ShareMiiShot</h3>
-            <span class="meta">Servizio web• 2025</span>
+            <span class="meta">Servizio web • 2025</span>
           </div>
-          <p>ShareMiiTool è un servizio wen che permette la condivisione di foto tra Wii U/3DS e altri dispositivi come telefoni e PC.</p>
+          <p>ShareMiiShot è un servizio wen che permette la condivisione di foto tra Wii U/3DS e altri dispositivi come telefoni e PC.</p>
           <div class="actions">
             <a href="https://madebyanto.github.io/sharemiishot" class="btn primary"><i class="fa fa-book"></i> Vai al sito</a>
           </div>
