--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <div class="header-inner">
       <div class="brand" aria-hidden="false">
         <div class="mini-avatar" aria-hidden="true">
-          <img src="https://aurastudioitalia.it/antogalaxyavatar.png" alt="Anto avatar">
+          <img src="anto.png" alt="Anto avatar">
         </div>
         <h1>Anto</h1>
       </div>
@@ -376,7 +376,7 @@
             <h3>ShareMiiShot</h3>
             <span class="meta">Servizio web • 2025</span>
           </div>
-          <p>ShareMiiShot è un servizio wen che permette la condivisione di foto tra Wii U/3DS e altri dispositivi come telefoni e PC.</p>
+          <p>ShareMiiShot è un servizio web che permette la condivisione di foto tra Wii U/3DS e altri dispositivi come telefoni e PC.</p>
           <div class="actions">
             <a href="https://madebyanto.github.io/sharemiishot" class="btn primary"><i class="fa fa-book"></i> Vai al sito</a>
           </div>
