--- a/index.html
+++ b/index.html
@@ -404,6 +404,16 @@
   </footer>
 
   <!-- ===== SCRIPT ===== -->
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('madebyanto', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#fcbf47',
+    'floating-chat.donateButton.text-color': '#323842'
+  });
+</script>
+  
   <script>
     // Menu mobile toggle
     const hamburger = document.getElementById('hamburger');
