Update image source paths in index.html

--- a/media/index.html
+++ b/media/index.html
@@ -47,20 +47,20 @@
     <h2>Biglietti Aereo per Open Day</h2>
     <div class="gallery">
       <div>
-        <img src="media/bpass_france.png" alt="Biglietto Francia" />
         <div class="item-title">BIGLIETTO AEREO (FRANCE)</div>
+        <img src="bpass_france.png" alt="Biglietto Francia" />
       </div>
       <div>
-        <img src="media/bpass_france_retro.png" alt="Biglietto Francia Retro" />
-        <div class="item-title">BIGLIETTO AEREO (FRANCE) RETRO</div>
+          <div class="item-title">BIGLIETTO AEREO (FRANCE) RETRO</div>
+        <img src="bpass_france_retro.png" alt="Biglietto Francia Retro" />
       </div>
       <div>
-        <img src="media/bpass_english.png" alt="Biglietto English" />
-        <div class="item-title">BIGLIETTO AEREO (ENGLISH)</div>
+           <div class="item-title">BIGLIETTO AEREO (ENGLISH)</div>
+        <img src="bpass_english.png" alt="Biglietto English" />   
       </div>
       <div>
-        <img src="media/bpass_english_retro.png" alt="Biglietto English Retro" />
         <div class="item-title">BIGLIETTO AEREO (ENGLISH) RETRO</div>
+        <img src="bpass_english_retro.png" alt="Biglietto English Retro" />
       </div>
     </div>
   </div>  <!-- QUI POTRAI AGGIUNGERE ALTRE SEZIONI FUTURE --></body>
