Change profile image from anto.png to anto.jpg

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <section id="about" aria-labelledby="aboutTitle">
       <div class="hero">
         <div class="avatar" role="img" aria-label="Foto di Anto">
-          <img src="anto.png" alt="Anto immagine profilo">
+          <img src="anto.jpg" alt="Anto immagine profilo">
         </div>
         <div class="bio">
           <h2 id="aboutTitle">Chi sono</h2>
