--- a/index.html
+++ b/index.html
@@ -10,57 +10,53 @@
 
   <style>
     /* -----------------------
-       THEME & VARIABLES (Adaptive)
+        THEME & VARIABLES 
        ----------------------- */
     :root {
-      /* Palette Dark (Default) */
       --bg-gradient: radial-gradient(circle at top right, #1a1a2e, #0f0f0f);
       --glass-bg: rgba(255, 255, 255, 0.05);
-      --glass-border: rgba(255, 255, 255, 0.1);
+      --glass-border: rgba(255, 255, 255, 0.12);
       --text: #f0f0f0;
       --text-muted: rgba(255, 255, 255, 0.7);
       --accent: #0099ff;
-      --card-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.8);
+      --card-shadow: 0 12px 40px 0 rgba(0, 0, 0, 0.6);
     }
 
     @media (prefers-color-scheme: light) {
       :root {
-        /* Palette Light */
         --bg-gradient: radial-gradient(circle at top right, #fdfbfb, #ebedee);
-        --glass-bg: rgba(0, 0, 0, 0.03);
-        --glass-border: rgba(0, 0, 0, 0.08);
+        --glass-bg: rgba(255, 255, 255, 0.6);
+        --glass-border: rgba(0, 153, 255, 0.15);
         --text: #2d3436;
         --text-muted: rgba(0, 0, 0, 0.6);
-        --accent: #0099ff;
-        --card-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
+        --accent: #0084ff;
+        --card-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);
       }
     }
 
     /* -----------------------
-       RESET & BASE
+        RESET & BASE
        ----------------------- */
-    * { box-sizing: border-box; transition: all 0.3s ease; }
+    * { box-sizing: border-box; transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
     html, body { 
       margin: 0; padding: 0; min-height: 100vh;
       background: var(--bg-gradient);
+      background-attachment: fixed;
       color: var(--text);
       font-family: 'Poppins', sans-serif;
       scroll-behavior: smooth;
     }
 
-    /* -----------------------
-       GLASSMORPHISM CORE
-       ----------------------- */
     .glass {
       background: var(--glass-bg);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      backdrop-filter: blur(12px) saturate(160%);
+      -webkit-backdrop-filter: blur(12px) saturate(160%);
       border: 1px solid var(--glass-border);
       border-radius: 20px;
     }
 
     /* -----------------------
-       HEADER
+        HEADER
        ----------------------- */
     header.site-header {
       position: fixed;
@@ -71,87 +67,71 @@
       padding: 10px 25px;
     }
 
-    .header-inner {
-      display: flex; align-items: center; justify-content: space-between;
-    }
-
+    .header-inner { display: flex; align-items: center; justify-content: space-between; }
     .brand { display: flex; align-items: center; gap: 12px; }
     .mini-avatar { 
         width: 45px; height: 45px; border-radius: 50%; 
         border: 2px solid var(--accent); overflow: hidden;
     }
+    .mini-avatar img { width: 100%; height: 100%; object-fit: cover; }
 
-    nav.main-nav { display: flex; gap: 15px; }
+    nav.main-nav { display: flex; gap: 10px; }
     nav.main-nav a {
       text-decoration: none; color: var(--text);
       font-size: 0.9rem; font-weight: 500;
       padding: 8px 15px; border-radius: 12px;
     }
-    nav.main-nav a:hover, nav.main-nav a.active {
-      background: var(--accent); color: #000;
-    }
+    nav.main-nav a:hover { background: rgba(255,255,255,0.1); }
+    nav.main-nav a.active { background: var(--accent); color: #fff; box-shadow: 0 4px 15px rgba(0, 153, 255, 0.3); }
 
     /* -----------------------
-       MAIN CONTENT
+        MAIN CONTENT
        ----------------------- */
-    main {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 120px 20px 60px;
-    }
+    main { max-width: 1100px; margin: 0 auto; padding: 120px 20px 60px; }
 
     section {
-      margin-bottom: 50px;
-      padding: 30px;
+      margin-bottom: 50px; padding: 30px;
       opacity: 0; transform: translateY(30px);
     }
     section.visible { opacity: 1; transform: translateY(0); }
 
-    /* -----------------------
-       HERO / ABOUT
-       ----------------------- */
+    /* HERO */
     .hero { display: flex; gap: 30px; align-items: center; flex-wrap: wrap; }
-    .avatar-container {
-      position: relative; width: 180px; height: 180px;
-    }
+    .avatar-container { position: relative; width: 180px; height: 180px; }
     .avatar-container img {
       width: 100%; height: 100%; object-fit: cover;
       border-radius: 30px; border: 2px solid var(--glass-border);
     }
 
-    /* -----------------------
-       SKILLS
-       ----------------------- */
+    /* SKILLS */
     .skills-grid { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 15px; }
     .skill-chip {
       padding: 8px 18px; font-size: 0.85rem; font-weight: 600;
       border-radius: 50px; background: var(--glass-bg);
       border: 1px solid var(--glass-border);
     }
-    .skill-chip:hover { background: var(--accent); color: #000; transform: scale(1.05); }
+    .skill-chip:hover { background: var(--accent); color: #fff; transform: translateY(-3px); }
 
-    /* -----------------------
-       PROJECT CARDS
-       ----------------------- */
+    /* PROJECT CARDS */
     .projects-grid {
       display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px; margin-top: 20px;
     }
     .card {
-      padding: 20px; display: flex; flex-direction: column; justify-content: space-between;
+      padding: 25px; display: flex; flex-direction: column; justify-content: space-between;
       box-shadow: var(--card-shadow);
     }
+    .card:hover { transform: translateY(-8px); border-color: var(--accent); }
     .card h3 { margin: 0 0 10px 0; color: var(--accent); }
+
     .btn {
-      margin-top: 15px; padding: 10px; text-align: center;
+      margin-top: 15px; padding: 12px; text-align: center;
       text-decoration: none; border-radius: 12px; font-weight: 700;
     }
-    .btn.primary { background: var(--accent); color: #000; }
-    .btn.primary:hover { opacity: 0.8; box-shadow: 0 0 15px var(--accent); }
+    .btn.primary { background: var(--accent); color: #fff; }
+    .btn.primary:hover { filter: brightness(1.1); box-shadow: 0 5px 15px rgba(0, 153, 255, 0.4); }
 
-    /* -----------------------
-       SOCIALS
-       ----------------------- */
+    /* SOCIALS */
     .social-row { display: flex; flex-wrap: wrap; gap: 15px; }
     .social-link {
       flex: 1; min-width: 120px; padding: 15px;
@@ -159,19 +139,16 @@
       color: #fff; text-decoration: none; font-weight: 600;
       display: flex; flex-direction: column; align-items: center; gap: 8px;
     }
+    .social-link:hover { transform: scale(1.05); filter: saturate(1.5); }
     .social-youtube { background: #ff0000; }
-    .social-tiktok { background: #000; }
+    .social-tiktok { background: #000; border: 1px solid #333; }
     .social-discord { background: #5865F2; }
-    .social-telegram { background: #0088cc; }
     .social-github { background: #333; }
 
-    /* -----------------------
-       MOBILE
-       ----------------------- */
     @media (max-width: 768px) {
       nav.main-nav { display: none; }
       .hero { text-align: center; justify-content: center; }
-      header.site-header { top: 10px; width: 95%; }
+      header.site-header { width: 95%; }
     }
   </style>
 </head>
@@ -230,7 +207,7 @@
     </section>
 
     <section id="projects">
-      <h2 style="margin-left: 10px;">Progetti Recenti</h2>
+      <h2 style="margin-left: 10px; margin-bottom: 20px;">Progetti Recenti</h2>
       <div class="projects-grid">
         <div class="card glass">
           <h3>Aura</h3>
@@ -262,38 +239,26 @@
   </main>
 
   <footer style="text-align: center; padding: 40px; color: var(--text-muted); font-size: 0.8rem;">
-    &copy; 2026 Anto • Sayori la mia pucci 🥹
+    &copy; 2026 Anto • <span style="color: #ff7675;">Sayori la mia pucci 🥹</span>
   </footer>
 
   <script>
-    // Intersection Observer per animazioni all'apparizione
-    const observerOptions = { threshold: 0.1 };
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-        }
+        if (entry.isIntersecting) entry.target.classList.add('visible');
       });
-    }, observerOptions);
+    }, { threshold: 0.1 });
 
-    document.querySelectorAll('section').forEach(section => {
-      observer.observe(section);
-    });
+    document.querySelectorAll('section').forEach(section => observer.observe(section));
 
-    // Highlight menu attivo allo scroll
     window.addEventListener('scroll', () => {
       let current = "";
       document.querySelectorAll('section').forEach(section => {
-        const sectionTop = section.offsetTop;
-        if (pageYOffset >= sectionTop - 150) {
-          current = section.getAttribute('id');
-        }
+        if (pageYOffset >= section.offsetTop - 150) current = section.getAttribute('id');
       });
       document.querySelectorAll('.main-nav a').forEach(a => {
         a.classList.remove('active');
-        if (a.getAttribute('href').includes(current)) {
-          a.classList.add('active');
-        }
+        if (a.getAttribute('href').includes(current)) a.classList.add('active');
       });
     });
   </script>
