--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="card glass">
           <h3>Aura</h3>
           <p style="font-size: 0.9rem; color: var(--text-muted)">Iniziativa sul software & app developing ispirata al modello Google.</p>
-          <a href="https://aurastudioitalia.it/join-aura" class="btn primary">Scopri di più</a>
+          <a href="https://aurastudioitalia.it/" class="btn primary">Scopri di più</a>
         </div>
         <div class="card glass">
           <h3>MyTool ;)</h3>
